--- a/requirements.txt
+++ b/requirements.txt
@@ -1,110 +1,6 @@
-altair==4.2.2
-asttokens==2.4.1
-attrs==25.3.0
-blinker==1.9.0
-cachetools==6.1.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.1
-contourpy==1.2.1
-cycler==0.12.1
-debugpy==1.8.0
-decorator==5.1.1
-entrypoints==0.4
-exceptiongroup==1.2.0
-executing==2.0.1
-filelock==3.14.0
-Flask==3.1.0
-Flask-SQLAlchemy==3.1.1
-fonttools==4.51.0
-fsspec==2024.3.1
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.1.1
-idna==3.7
-imageio==2.34.1
-importlib-metadata==7.0.1
-importlib_resources==6.4.0
-intel-openmp==2021.4.0
-ipykernel==6.28.0
-ipython==8.18.1
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter_client==8.6.0
-jupyter_core==5.7.0
-kiwisolver==1.4.5
-lazy_loader==0.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mkl==2021.4.0
-mpmath==1.3.0
-narwhals==1.43.1
-nest-asyncio==1.5.8
-networkx==3.2.1
-numpy==1.26.4
-opencv-contrib-python==4.5.1.48
-opencv-python==4.9.0.80
-packaging==23.2
-pandas==2.2.2
-parso==0.8.3
-pillow==10.3.0
-platformdirs==4.1.0
-prompt-toolkit==3.0.43
-protobuf==3.20.3
-psutil==5.9.7
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-pyarrow==20.0.0
-pydeck==0.9.1
-Pygments==2.17.2
-Pympler==1.1
-pyparsing==3.1.2
-python-dateutil==2.8.2
-pytz==2024.1
-pywin32==306
-PyYAML==6.0.1
-pyzmq==25.1.2
-referencing==0.36.2
-requests==2.31.0
-rich==14.0.0
-rpds-py==0.25.1
-scikit-image==0.22.0
-scikit-learn==1.4.2
-scipy==1.13.0
-seaborn==0.13.2
-semver==3.0.4
-six==1.16.0
-smmap==5.0.2
-SQLAlchemy==2.0.36
-stack-data==0.6.3
-sympy==1.12
-tbb==2021.12.0
-thop==0.1.1.post2209072238
-threadpoolctl==3.5.0
-tifffile==2024.5.10
-toml==0.10.2
-toolz==1.0.0
-torch==2.3.0
-torchvision==0.18.0
-tornado==6.4
-tqdm==4.66.4
-traitlets==5.14.1
-typing_extensions==4.14.0
-tzdata==2024.1
-tzlocal==5.3.1
-ultralytics==8.2.15
-urllib3==2.2.1
-validators==0.35.0
-watchdog==6.0.0
-wcwidth==0.2.13
-Werkzeug==3.1.3
-zipp==3.17.0
+streamlit==1.26.0
+pandas
+scikit-learn
+joblib
+altair
+pydeck
