--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.24.1
-pandas
-scikit-learn
-joblib
-altair
-pydeck
+pandas==2.2.2
+scikit-learn==1.4.2
+joblib==1.4.2
+altair==5.2.0
+pydeck==0.8.1b0
